--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Maintainer: Boxi Zhang <bossyzhang@gmail.com>
 Description: Boxi for lab4.
 Depends: R (>= 3.2.0)
 License: GPL
-Imports: ggplot2, gridExtra,stats,utils
+Imports: ggplot2, gridExtra,stats,utils,methods
 Suggests: testthat, knitr, rmarkdown
 Encoding: UTF-8
 LazyData: true
